<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrasiActivity">

    <EditText
        android:id="@+id/etNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/alamat"
        app:layout_constraintEnd_toEndOf="@+id/etNama"
        app:layout_constraintStart_toStartOf="@+id/etNama"
        app:layout_constraintTop_toBottomOf="@+id/etNama" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/etAlamat"
        app:layout_constraintStart_toStartOf="@+id/etAlamat"
        app:layout_constraintTop_toBottomOf="@+id/etAlamat" />

    <EditText
        android:id="@+id/etTelpon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/no_telpon"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />


    <TextView
        android:id="@+id/tvJudulJenisKelamin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/jenis_kelamin"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/etTelpon"
        app:layout_constraintStart_toStartOf="@+id/etTelpon"
        app:layout_constraintTop_toBottomOf="@+id/etTelpon" />

    <RadioGroup
        android:id="@+id/rgJenisKelamin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/tvJudulJenisKelamin"
        app:layout_constraintStart_toStartOf="@+id/tvJudulJenisKelamin"
        app:layout_constraintTop_toBottomOf="@+id/tvJudulJenisKelamin">

        <RadioButton
            android:id="@+id/rbLaki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/laki"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbPerempuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/perempuan"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvHobi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/hobi"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/rgJenisKelamin"
        app:layout_constraintStart_toStartOf="@+id/rgJenisKelamin"
        app:layout_constraintTop_toBottomOf="@+id/rgJenisKelamin" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/tvHobi"
        app:layout_constraintStart_toStartOf="@+id/tvHobi"
        app:layout_constraintTop_toBottomOf="@+id/tvHobi">

        <CheckBox
            android:id="@+id/cbMakan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/makan"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/cbMinum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minum"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/cbTidur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tidur"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvProdi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/prodi"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Spinner
        android:id="@+id/spProdi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="@+id/tvProdi"
        app:layout_constraintStart_toStartOf="@+id/tvProdi"
        app:layout_constraintTop_toBottomOf="@+id/tvProdi" />

    <Button
        android:id="@+id/btnKirim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:onClick="kirim"
        android:text="@string/kirim"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/spProdi"
        app:layout_constraintStart_toStartOf="@+id/spProdi"
        app:layout_constraintTop_toBottomOf="@+id/spProdi" />

</androidx.constraintlayout.widget.ConstraintLayout>