<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivApp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333"
        app:srcCompat="@drawable/polpos"
        android:contentDescription="@string/polpos" />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:onClick="callCenter"
        android:text="@string/call_center"
        app:layout_constraintEnd_toEndOf="@+id/ivApp"
        app:layout_constraintStart_toStartOf="@+id/ivApp"
        app:layout_constraintTop_toBottomOf="@+id/ivApp" />

    <Button
        android:id="@+id/btnWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:onClick="webPoltekpos"
        android:text="@string/website_poltekpos"
        app:layout_constraintEnd_toEndOf="@+id/btnCall"
        app:layout_constraintStart_toStartOf="@+id/btnCall"
        app:layout_constraintTop_toBottomOf="@+id/btnCall" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:onClick="registrasi"
        android:text="@string/registrasi"
        app:layout_constraintEnd_toEndOf="@+id/btnWeb"
        app:layout_constraintStart_toStartOf="@+id/btnWeb"
        app:layout_constraintTop_toBottomOf="@+id/btnWeb" />
</androidx.constraintlayout.widget.ConstraintLayout>