<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRegistrasiActivity">

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/nama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/alamat"
        app:layout_constraintEnd_toEndOf="@+id/tvNama"
        app:layout_constraintStart_toStartOf="@+id/tvNama"
        app:layout_constraintTop_toBottomOf="@+id/tvNama" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/tvAlamat"
        app:layout_constraintStart_toStartOf="@+id/tvAlamat"
        app:layout_constraintTop_toBottomOf="@+id/tvAlamat" />

    <TextView
        android:id="@+id/tvTelpon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/no_telpon"
        app:layout_constraintEnd_toEndOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvJenisKelamin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="Jenis Kelamin"
        app:layout_constraintEnd_toEndOf="@+id/tvTelpon"
        app:layout_constraintStart_toStartOf="@+id/tvTelpon"
        app:layout_constraintTop_toBottomOf="@+id/tvTelpon" />

    <TextView
        android:id="@+id/tvHobi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="Hobi"
        app:layout_constraintEnd_toEndOf="@+id/tvJenisKelamin"
        app:layout_constraintStart_toStartOf="@+id/tvJenisKelamin"
        app:layout_constraintTop_toBottomOf="@+id/tvJenisKelamin" />

    <TextView
        android:id="@+id/tvProdi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="Program Studi"
        app:layout_constraintEnd_toEndOf="@+id/tvHobi"
        app:layout_constraintStart_toStartOf="@+id/tvHobi"
        app:layout_constraintTop_toBottomOf="@+id/tvHobi" />
</androidx.constraintlayout.widget.ConstraintLayout>